Port: Field* and FilteredDocId*
Unsure about return type covariance in FieldComparator, will come back
to that one.

--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -548,6 +548,7 @@
     <Compile Include="Search\FieldDoc.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Search\FieldValueFilter.cs" />
     <Compile Include="Search\FieldValueHitQueue.cs" />
     <Compile Include="Search\Filter.cs">
       <SubType>Code</SubType>
