--- a/src/core/Lucene.Net.csproj
+++ b/src/core/Lucene.Net.csproj
@@ -864,6 +864,7 @@
     <Compile Include="Support\BufferUnderflowException.cs" />
     <Compile Include="Support\BuildType.cs" />
     <Compile Include="Support\ByteBuffer.cs" />
+    <Compile Include="Support\ICallable.cs" />
     <Compile Include="Support\Character.cs" />
     <Compile Include="Support\CloseableThreadLocalProfiler.cs" />
     <Compile Include="Support\Collections.cs" />
@@ -889,6 +890,7 @@
     <Compile Include="Support\GeneralKeyedCollection.cs" />
     <Compile Include="Support\HashMap.cs" />
     <Compile Include="Support\ICharSequence.cs" />
+    <Compile Include="Support\ICompletionService.cs" />
     <Compile Include="Support\IdentityComparer.cs" />
     <Compile Include="Support\IdentityHashMap.cs" />
     <Compile Include="Support\IdentityHashSet.cs" />
@@ -908,6 +910,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Support\StringTokenizer.cs" />
+    <Compile Include="Support\TaskSchedulerCompletionService.cs" />
     <Compile Include="Support\ThreadFactory.cs" />
     <Compile Include="Support\TimeUnit.cs" />
     <Compile Include="Support\TreeMap.cs" />
@@ -1069,7 +1072,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Util\RamUsageEstimator.cs" />
-    <Compile Include="Util\ReaderUtil.cs" />
     <Compile Include="Util\SmallFloat.cs">
       <SubType>Code</SubType>
     </Compile>
