Start of unit testing work...
this is going to be fun. :-(

--- a/test/core/Lucene.Net.Test.csproj
+++ b/test/core/Lucene.Net.Test.csproj
@@ -200,13 +200,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Analysis\BaseTokenStreamTestCase.cs" />
     <Compile Include="Analysis\Tokenattributes\TestSimpleAttributeImpls.cs" />
     <Compile Include="Analysis\Tokenattributes\TestTermAttributeImpl.cs" />
-    <Compile Include="Analysis\TestAnalyzers.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Analysis\TestASCIIFoldingFilter.cs" />
     <Compile Include="Analysis\TestCachingTokenFilter.cs" />
     <Compile Include="Analysis\TestCharArraySet.cs" />
     <Compile Include="Analysis\TestCharFilter.cs" />
@@ -537,7 +532,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Util\LocalizedTestCase.cs" />
-    <Compile Include="Util\LuceneTestCase.cs" />
     <Compile Include="Util\Paths.cs" />
     <Compile Include="Util\TestAttributeSource.cs" />
     <Compile Include="Util\TestBitVector.cs">
@@ -597,6 +591,10 @@
     <ProjectReference Include="..\..\src\demo\Demo.Common\Demo.Common.csproj">
       <Project>{F04CA2F4-E182-46A8-B914-F46AF5319E83}</Project>
       <Name>Demo.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\test-framework\Lucene.Net.TestFramework.csproj">
+      <Project>{b2c0d749-ce34-4f62-a15e-00cb2ff5ddb3}</Project>
+      <Name>Lucene.Net.TestFramework</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
