--- a/src/contrib/Analyzers/Contrib.Analyzers.csproj
+++ b/src/contrib/Analyzers/Contrib.Analyzers.csproj
@@ -103,116 +103,39 @@
     <Reference Condition="'$(Framework)' == 'NET35'" Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AR\ArabicAnalyzer.cs" />
-    <Compile Include="AR\ArabicLetterTokenizer.cs" />
-    <Compile Include="AR\ArabicNormalizationFilter.cs" />
-    <Compile Include="AR\ArabicNormalizer.cs" />
-    <Compile Include="AR\ArabicStemFilter.cs" />
-    <Compile Include="AR\ArabicStemmer.cs" />
-    <Compile Include="BR\BrazilianAnalyzer.cs" />
-    <Compile Include="BR\BrazilianStemFilter.cs" />
-    <Compile Include="BR\BrazilianStemmer.cs" />
-    <Compile Include="CJK\CJKAnalyzer.cs" />
-    <Compile Include="CJK\CJKTokenizer.cs" />
-    <Compile Include="Cn\ChineseAnalyzer.cs" />
-    <Compile Include="Cn\ChineseFilter.cs" />
-    <Compile Include="Cn\ChineseTokenizer.cs" />
-    <Compile Include="Compound\CompoundWordTokenFilterBase.cs" />
-    <Compile Include="Compound\DictionaryCompoundWordTokenFilter.cs" />
-    <Compile Include="Compound\HyphenationCompoundWordTokenFilter.cs" />
-    <Compile Include="Compound\Hyphenation\ByteVector.cs" />
-    <Compile Include="Compound\Hyphenation\CharVector.cs" />
-    <Compile Include="Compound\Hyphenation\Hyphen.cs" />
-    <Compile Include="Compound\Hyphenation\Hyphenation.cs" />
-    <Compile Include="Compound\Hyphenation\HyphenationException.cs" />
-    <Compile Include="Compound\Hyphenation\HyphenationTree.cs" />
-    <Compile Include="Compound\Hyphenation\PatternConsumer.cs" />
-    <Compile Include="Compound\Hyphenation\PatternParser.cs" />
-    <Compile Include="Compound\Hyphenation\TernaryTree.cs" />
     <Compile Include="Core\KeywordAnalyzer.cs" />
     <Compile Include="Core\KeywordTokenizer.cs" />
     <Compile Include="Core\KeywordTokenizerFactory.cs" />
     <Compile Include="Core\LetterTokenizer.cs" />
     <Compile Include="Core\LetterTokenizerFactory.cs" />
-    <Compile Include="Cz\CzechAnalyzer.cs" />
-    <Compile Include="De\GermanAnalyzer.cs" />
-    <Compile Include="De\GermanStemFilter.cs" />
-    <Compile Include="De\GermanStemmer.cs" />
-    <Compile Include="De\GermanDIN2Stemmer.cs" />
-    <Compile Include="El\GreekAnalyzer.cs" />
-    <Compile Include="El\GreekLowerCaseFilter.cs" />
-    <Compile Include="Fa\PersianAnalyzer.cs" />
-    <Compile Include="Fa\PersianNormalizationFilter.cs" />
-    <Compile Include="Fa\PersianNormalizer.cs" />
-    <Compile Include="Fr\ElisionFilter.cs" />
-    <Compile Include="Fr\FrenchAnalyzer.cs" />
-    <Compile Include="Fr\FrenchStemFilter.cs" />
-    <Compile Include="Fr\FrenchStemmer.cs" />
-    <Compile Include="Hunspell\HunspellAffix.cs" />
-    <Compile Include="Hunspell\HunspellDictionary.cs" />
-    <Compile Include="Hunspell\HunspellStem.cs" />
-    <Compile Include="Hunspell\HunspellStemFilter.cs" />
-    <Compile Include="Hunspell\HunspellStemmer.cs" />
-    <Compile Include="Hunspell\HunspellWord.cs" />
-    <Compile Include="Miscellaneous\EmptyTokenStream.cs" />
-    <Compile Include="Miscellaneous\InjectablePrefixAwareTokenFilter.cs" />
-    <Compile Include="Miscellaneous\PatternAnalyzer.cs" />
-    <Compile Include="Miscellaneous\PrefixAndSuffixAwareTokenFilter.cs" />
-    <Compile Include="Miscellaneous\PrefixAwareTokenStream.cs" />
-    <Compile Include="Miscellaneous\SingleTokenTokenStream.cs" />
-    <Compile Include="NGram\EdgeNGramTokenFilter.cs" />
-    <Compile Include="NGram\EdgeNGramTokenizer.cs" />
-    <Compile Include="NGram\NGramTokenFilter.cs" />
-    <Compile Include="NGram\NGramTokenizer.cs" />
-    <Compile Include="Nl\DutchAnalyzer.cs" />
-    <Compile Include="Nl\DutchStemFilter.cs" />
-    <Compile Include="Nl\DutchStemmer.cs" />
-    <Compile Include="Payloads\AbstractEncoder.cs" />
-    <Compile Include="Payloads\DelimitedPayloadTokenFilter.cs" />
-    <Compile Include="Payloads\FloatEncoder.cs" />
-    <Compile Include="Payloads\IdentityEncoder.cs" />
-    <Compile Include="Payloads\IntegerEncoder.cs" />
-    <Compile Include="Payloads\NumericPayloadTokenFilter.cs" />
-    <Compile Include="Payloads\PayloadEncoder.cs" />
-    <Compile Include="Payloads\PayloadHelper.cs" />
-    <Compile Include="Payloads\TokenOffsetPayloadTokenFilter.cs" />
-    <Compile Include="Payloads\TypeAsPayloadTokenFilter.cs" />
-    <Compile Include="Position\PositionFilter.cs" />
-    <Compile Include="Query\QueryAutoStopWordAnalyzer.cs" />
-    <Compile Include="Reverse\ReverseStringFilter.cs" />
-    <Compile Include="Ru\RussianAnalyzer.cs" />
-    <Compile Include="Ru\RussianLetterTokenizer.cs" />
-    <Compile Include="Ru\RussianLowerCaseFilter.cs" />
-    <Compile Include="Ru\RussianStemFilter.cs" />
-    <Compile Include="Ru\RussianStemmer.cs" />
+    <Compile Include="Core\LowerCaseFilter.cs" />
+    <Compile Include="Core\LowerCaseFilterFactory.cs" />
+    <Compile Include="Core\LowerCaseTokenizer.cs" />
+    <Compile Include="Core\LowerCaseTokenizerFactory.cs" />
+    <Compile Include="Core\SimpleAnalyzer.cs" />
+    <Compile Include="Core\StopAnalyzer.cs" />
+    <Compile Include="Core\StopFilter.cs" />
+    <Compile Include="Core\StopFilterFactory.cs" />
+    <Compile Include="Core\TypeTokenFilter.cs" />
+    <Compile Include="Core\TypeTokenFilterFactory.cs" />
+    <Compile Include="Core\WhitespaceAnalyzer.cs" />
+    <Compile Include="Core\WhitespaceTokenizer.cs" />
+    <Compile Include="Core\WhitespaceTokenizerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shingle\Matrix\Column.cs" />
-    <Compile Include="Shingle\Matrix\Matrix.cs" />
-    <Compile Include="Shingle\Matrix\MatrixPermutationIterator.cs" />
-    <Compile Include="Shingle\Matrix\Row.cs" />
-    <Compile Include="Shingle\ShingleAnalyzerWrapper.cs" />
-    <Compile Include="Shingle\ShingleFilter.cs" />
-    <Compile Include="Shingle\ShingleMatrixFilter.cs" />
-    <Compile Include="Shingle\TokenPositioner.cs" />
-    <Compile Include="Shingle\Codec\OneDimensionalNonWeightedTokenSettingsCodec.cs" />
-    <Compile Include="Shingle\Codec\SimpleThreeDimensionalTokenSettingsCodec.cs" />
-    <Compile Include="Shingle\Codec\TokenSettingsCodec.cs" />
-    <Compile Include="Shingle\Codec\TwoDimensionalNonWeightedSynonymTokenSettingsCodec.cs" />
-    <Compile Include="Sinks\DateRecognizerSinkFilter.cs" />
-    <Compile Include="Sinks\TokenRangeSinkFilter.cs" />
-    <Compile Include="Sinks\TokenTypeSinkFilter.cs" />
     <Compile Include="Support\AbstractSet.cs" />
     <Compile Include="Support\StringExtensions.cs" />
-    <Compile Include="Th\ThaiAnalyzer.cs" />
-    <Compile Include="Th\ThaiWordFilter.cs" />
     <Compile Include="Util\AbstractAnalysisFactory.cs" />
     <Compile Include="Util\AnalysisSPILoader.cs" />
     <Compile Include="Util\CharacterUtils.cs" />
     <Compile Include="Util\CharArrayMap.cs" />
     <Compile Include="Util\CharArraySet.cs" />
     <Compile Include="Util\CharTokenizer.cs" />
+    <Compile Include="Util\FilteringTokenFilter.cs" />
+    <Compile Include="Util\IMultiTermAwareComponent.cs" />
     <Compile Include="Util\IResourceLoader.cs" />
+    <Compile Include="Util\IResourceLoaderAware.cs" />
     <Compile Include="Util\StopwordAnalyzerBase.cs" />
+    <Compile Include="Util\TokenFilterFactory.cs" />
     <Compile Include="Util\TokenizerFactory.cs" />
     <Compile Include="Util\WordlistLoader.cs" />
     <Compile Include="WordlistLoader.cs" />
@@ -227,8 +150,31 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Compound\Hyphenation\hyphenation.dtd" />
     <None Include="Lucene.Net.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="BR\" />
+    <Folder Include="CJK\" />
+    <Folder Include="Cn\" />
+    <Folder Include="Compound\Hyphenation\" />
+    <Folder Include="Cz\" />
+    <Folder Include="De\" />
+    <Folder Include="El\" />
+    <Folder Include="Fa\" />
+    <Folder Include="Fr\" />
+    <Folder Include="Hunspell\" />
+    <Folder Include="Miscellaneous\" />
+    <Folder Include="NGram\" />
+    <Folder Include="Nl\" />
+    <Folder Include="Payloads\" />
+    <Folder Include="Position\" />
+    <Folder Include="Query\" />
+    <Folder Include="Reverse\" />
+    <Folder Include="Ru\" />
+    <Folder Include="Shingle\Codec\" />
+    <Folder Include="Shingle\Matrix\" />
+    <Folder Include="Sinks\" />
+    <Folder Include="Th\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
