Implement Standard and Classic Analyzers

--- a/src/contrib/Analyzers/Contrib.Analyzers.csproj
+++ b/src/contrib/Analyzers/Contrib.Analyzers.csproj
@@ -122,6 +122,21 @@
     <Compile Include="Core\WhitespaceTokenizer.cs" />
     <Compile Include="Core\WhitespaceTokenizerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Standard\ClassicAnalyzer.cs" />
+    <Compile Include="Standard\ClassicFilter.cs" />
+    <Compile Include="Standard\ClassicFilterFactory.cs" />
+    <Compile Include="Standard\ClassicTokenizer.cs" />
+    <Compile Include="Standard\ClassicTokenizerFactory.cs" />
+    <Compile Include="Standard\ClassicTokenizerImpl.cs" />
+    <Compile Include="Standard\IStandardTokenizerInterface.cs" />
+    <Compile Include="Standard\StandardAnalyzer.cs" />
+    <Compile Include="Standard\StandardFilter.cs" />
+    <Compile Include="Standard\StandardFilterFactory.cs" />
+    <Compile Include="Standard\StandardTokenizer.cs" />
+    <Compile Include="Standard\StandardTokenizerFactory.cs" />
+    <Compile Include="Standard\StandardTokenizerImpl.cs" />
+    <Compile Include="Standard\Std31\StandardTokenizerImpl31.cs" />
+    <Compile Include="Standard\Std34\StandardTokenizerImpl34.cs" />
     <Compile Include="Support\AbstractSet.cs" />
     <Compile Include="Support\StringExtensions.cs" />
     <Compile Include="Util\AbstractAnalysisFactory.cs" />
