Port: Analyzer for CN

--- a/src/contrib/Analyzers/Contrib.Analyzers.csproj
+++ b/src/contrib/Analyzers/Contrib.Analyzers.csproj
@@ -105,7 +105,9 @@
   <ItemGroup>
     <Compile Include="Cn\ChineseAnalyzer.cs" />
     <Compile Include="Cn\ChineseFilter.cs" />
+    <Compile Include="Cn\ChineseFilterFactory.cs" />
     <Compile Include="Cn\ChineseTokenizer.cs" />
+    <Compile Include="Cn\ChineseTokenizerFactory.cs" />
     <Compile Include="Core\KeywordAnalyzer.cs" />
     <Compile Include="Core\KeywordTokenizer.cs" />
     <Compile Include="Core\KeywordTokenizerFactory.cs" />
