--- a/src/contrib/QueryParsers/Contrib.QueryParsers.csproj
+++ b/src/contrib/QueryParsers/Contrib.QueryParsers.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Flexible\Core\Config\IFieldConfigListener.cs" />
     <Compile Include="Flexible\Core\Config\QueryConfigHandler.cs" />
     <Compile Include="Flexible\Core\Nodes\FuzzyQueryNode.cs" />
+    <Compile Include="Flexible\Core\Nodes\IRangeQueryNode.cs" />
     <Compile Include="Flexible\Core\Nodes\ITextableQueryNode.cs" />
     <Compile Include="Flexible\Core\Messages\QueryParserMessages.cs" />
     <Compile Include="Flexible\Core\Nodes\AndQueryNode.cs" />
@@ -80,12 +81,27 @@
     <Compile Include="Flexible\Core\Nodes\MatchAllDocsQueryNode.cs" />
     <Compile Include="Flexible\Core\Nodes\MatchNoDocsQueryNode.cs" />
     <Compile Include="Flexible\Core\Nodes\ModifierQueryNode.cs" />
+    <Compile Include="Flexible\Core\Nodes\NoTokenFoundQueryNode.cs" />
+    <Compile Include="Flexible\Core\Nodes\OpaqueQueryNode.cs" />
+    <Compile Include="Flexible\Core\Nodes\OrQueryNode.cs" />
+    <Compile Include="Flexible\Core\Nodes\PathQueryNode.cs" />
+    <Compile Include="Flexible\Core\Nodes\PhraseSlopQueryNode.cs" />
+    <Compile Include="Flexible\Core\Nodes\ProximityQueryNode.cs" />
     <Compile Include="Flexible\Core\Nodes\QueryNode.cs" />
+    <Compile Include="Flexible\Core\Nodes\QuotedFieldQueryNode.cs" />
+    <Compile Include="Flexible\Core\Nodes\SlopQueryNode.cs" />
+    <Compile Include="Flexible\Core\Nodes\TokenizedPhraseQueryNode.cs" />
     <Compile Include="Flexible\Core\Parser\IEscapeQuerySyntax.cs" />
     <Compile Include="Flexible\Core\Parser\ISyntaxParser.cs" />
+    <Compile Include="Flexible\Core\Processors\IQueryNodeProcessor.cs" />
+    <Compile Include="Flexible\Core\Processors\NoChildOptimizationQueryNodeProcessor.cs" />
+    <Compile Include="Flexible\Core\Processors\QueryNodeProcessor.cs" />
+    <Compile Include="Flexible\Core\Processors\QueryNodeProcessorPipeline.cs" />
+    <Compile Include="Flexible\Core\Processors\RemoveDeletedQueryNodesProcessor.cs" />
     <Compile Include="Flexible\Core\QueryNodeError.cs" />
     <Compile Include="Flexible\Core\QueryNodeException.cs" />
     <Compile Include="Flexible\Core\QueryNodeParseException.cs" />
+    <Compile Include="Flexible\Core\QueryParserHelper.cs" />
     <Compile Include="Flexible\Core\Util\QueryNodeOperation.cs" />
     <Compile Include="Flexible\Core\Util\StringUtils.cs" />
     <Compile Include="Flexible\Core\Util\UnescapedCharSequence.cs" />
