Some work on Flexible.Standard

--- a/src/contrib/QueryParsers/Contrib.QueryParsers.csproj
+++ b/src/contrib/QueryParsers/Contrib.QueryParsers.csproj
@@ -111,8 +111,20 @@
     <Compile Include="Flexible\Messages\NLS.cs" />
     <Compile Include="Flexible\Standard\Builders\AnyQueryNodeBuilder.cs" />
     <Compile Include="Flexible\Standard\Builders\BooleanQueryNodeBuilder.cs" />
+    <Compile Include="Flexible\Standard\Builders\BoostQueryNodeBuilder.cs" />
+    <Compile Include="Flexible\Standard\Builders\DummyQueryNodeBuilder.cs" />
+    <Compile Include="Flexible\Standard\Builders\FieldQueryNodeBuilder.cs" />
+    <Compile Include="Flexible\Standard\Builders\FuzzyQueryNodeBuilder.cs" />
+    <Compile Include="Flexible\Standard\Builders\GroupQueryNodeBuilder.cs" />
     <Compile Include="Flexible\Standard\Builders\IStandardQueryBuilder.cs" />
+    <Compile Include="Flexible\Standard\Builders\MatchAllDocsQueryNodeBuilder.cs" />
+    <Compile Include="Flexible\Standard\Builders\MatchNoDocsQueryNodeBuilder.cs" />
+    <Compile Include="Flexible\Standard\Builders\ModifierQueryNodeBuilder.cs" />
+    <Compile Include="Flexible\Standard\Builders\MultiPhraseQueryNodeBuilder.cs" />
     <Compile Include="Flexible\Standard\ICommonQueryParserConfiguration.cs" />
+    <Compile Include="Flexible\Standard\Nodes\AbstractRangeQueryNode.cs" />
+    <Compile Include="Flexible\Standard\Nodes\BooleanModifierNode.cs" />
+    <Compile Include="Flexible\Standard\Nodes\MultiPhraseQueryNode.cs" />
     <Compile Include="Flexible\Standard\Parser\EscapeQuerySyntaxImpl.cs" />
     <Compile Include="Flexible\Standard\Parser\ICharStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
